vs oraz polityka prywatności

--- a/index.html
+++ b/index.html
@@ -133,16 +133,20 @@
         <h1>Przykładowe projekty</h1>
         <div class="projects-container">
             <div class="project-item">
-                <img src="img/pm11.png" alt="Logo 2" class="project-logo">
-                <p>Pozyskanie kapitału, struktura i model finansowy rewitalizacji kamienicy.</p>
+                <img src="img/vs.jpeg" alt="volleystation" class="project-logo">
+                <p><b>Globalny SaaS</b><br/>Rekrutacja CFO, nadzór nad przygotowaniem materiałów dla inwestorów.</p>
             </div>
             <div class="project-item">
-                <img src="img/bergman.png" alt="Logo 3" class="project-logo">
-                <p>Restrukturyzacja kosztów, wprowadzenie faktoringu i opracowanie nowych założeń finansowych dla biznesu.</p>
+                <img src="img/pm11.png" alt="PM11" class="project-logo">
+                <p><b>Nieruchomości</b><br/>Pozyskanie kapitału, projekt struktury i zbudowanie modelu finansowego rewitalizacji kamienicy.</p>
             </div>
             <div class="project-item">
-                <img src="img/tfi.png" alt="Logo 1" class="project-logo">
-                <p>Strategia subfubduszu, przygotowanie modeli finansowych dla projektów inwestycyjnych.</p>
+                <img src="img/bergman.png" alt="Bergman Engineering" class="project-logo">
+                <p><b>Contracting inżynierów</b><br/>Restrukturyzacja kosztów, przebudowa działu księgowego, wprowadzenie faktoringu i opracowanie nowych założeń finansowych dla biznesu.</p>
+            </div>
+            <div class="project-item">
+                <img src="img/tfi.png" alt="tfi" class="project-logo">
+                <p></p><b>Fundusze inwestycyjne</b><br/>Strategia subfubduszu, przygotowanie modeli finansowych dla projektów inwestycyjnych.</p>
             </div>
         </div>
     </section>
@@ -190,7 +194,7 @@
             <div class="footer-column">
                 <h3>Informacje</h3>
                 <ul>
-                    <li><a href="#expierience">Polityka prywatności</a></li>
+                    <li><a href="doc/Polityka_prywatnosci.pdf">Polityka prywatności (ODF)</a></li>
                 </ul>
             </div>
             <div class="footer-column">
