fix: kalendarz na mobile

--- a/index.html
+++ b/index.html
@@ -28,25 +28,29 @@
             Zautomatyzuj procesy.<br/>
             Uwolnij czas na rozwój firmy.
             </h1>
-            <p class="mar">Obniżysz koszty (gwarantuję to!), lepiej wycenisz usługi i uwolnisz płynność finansową na rozwój. Automatyzacja to mniej czasu straconego na bezproduktywną administrację.</p>
+            <p class="mar">Obniżysz koszty, lepiej wycenisz usługi i uwolnisz płynność finansową na rozwój. Automatyzacja to mniej czasu straconego na bezproduktywną administrację.</p>
             <!-- <a href="#offer" class="btn">Zrób pierwszy krok</a> -->
-            <!-- Google Calendar Appointment Scheduling begin -->
-            <link href="https://calendar.google.com/calendar/scheduling-button-script.css" rel="stylesheet">
-            <script src="https://calendar.google.com/calendar/scheduling-button-script.js" async></script>
-            <script>
-            (function() {
-            var target = document.currentScript;
-            window.addEventListener('load', function() {
-                calendar.schedulingButton.load({
-                url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ1-7HnIr4lYQPXYS-1FrUTd659RBKIaz7vMFJkLvoZ41g6TGhjErKJRj-JVF3n_RtMMgy1o_C5u?gv=true',
-                color: '#0056b3',
-                label: 'Zrób pierwszy krok',
-                target,
+            <a href="https://calendar.app.google/yj5oxquj9VDekEtW9" class="calendar-link">Zrób pierwszy krok</a>
+            
+            <div class="calendar-widget">
+                <!-- Google Calendar Appointment Scheduling begin -->
+                <link href="https://calendar.google.com/calendar/scheduling-button-script.css" rel="stylesheet">
+                <script src="https://calendar.google.com/calendar/scheduling-button-script.js" async></script>
+                <script>
+                (function() {
+                var target = document.currentScript;
+                window.addEventListener('load', function() {
+                    calendar.schedulingButton.load({
+                    url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ1-7HnIr4lYQPXYS-1FrUTd659RBKIaz7vMFJkLvoZ41g6TGhjErKJRj-JVF3n_RtMMgy1o_C5u?gv=true',
+                    color: '#0056b3',
+                    label: 'Zrób pierwszy krok',
+                    target,
+                    });
                 });
-            });
-            })();
-            </script>
-            <!-- end Google Calendar Appointment Scheduling -->
+                })();
+                </script>
+                <!-- end Google Calendar Appointment Scheduling -->
+            </div>
         </div>
     </section>
     <section class="questions">
@@ -156,6 +160,10 @@
             <div class="offer-item">
                 <i class="fa-solid fa-angle-right"></i><b>Pierwsza rozmowa</b>
                 <p>Porozmawiajmy, aby określić czego potrzebujesz. Bezpłatnie.</p>
+
+                <a href="https://calendar.app.google/yj5oxquj9VDekEtW9" class="calendar-link">Zobacz terminy</a>
+
+                <div class="calendar-widget">
                     <!-- Google Calendar Appointment Scheduling begin -->
                     <link href="https://calendar.google.com/calendar/scheduling-button-script.css" rel="stylesheet">
                     <script src="https://calendar.google.com/calendar/scheduling-button-script.js" async></script>
@@ -173,6 +181,7 @@
                     })();
                     </script>
                     <!-- end Google Calendar Appointment Scheduling -->
+                </div>
             </div>
             <div class="offer-item">
                 <i class="fa-solid fa-angles-right"></i><b>Pakiet konsultacji</b>
@@ -193,13 +202,11 @@
         <div id="contact" class="footer-container">
             <div class="footer-column">
                 <h3>Informacje</h3>
-                <ul>
-                    <li><a href="doc/Polityka_prywatnosci.pdf">Polityka prywatności (ODF)</a></li>
-                </ul>
+                <a href="doc/Polityka_prywatnosci.pdf">Polityka prywatności</a>
             </div>
             <div class="footer-column">
                 <h3>Kontakt</h3>
-                <p>Email: <a style="color: white;" href="mailto:krzysztof.czuba@gmail.com">krzysztof.czuba@gmail.com</a></p>
+                Email: <a style="color: white;" href="mailto:krzysztof.czuba@gmail.com">krzysztof.czuba@gmail.com</a>
             </div>
         </div>
     </footer>
