--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
             </ul>
         </nav>
     </header>
+
+
     <section class="hero">
         <div class="hero-content">
             <h1>Uporządkuj finanse.<br/>
@@ -32,8 +34,7 @@
             <!-- <a href="#offer" class="btn">Zrób pierwszy krok</a> -->
             <a href="https://calendar.app.google/yj5oxquj9VDekEtW9" class="calendar-link">Zrób pierwszy krok</a>
             
-            <div class="calendar-widget">
-                <!-- Google Calendar Appointment Scheduling begin -->
+            <div class="calendar-widget"> 
                 <link href="https://calendar.google.com/calendar/scheduling-button-script.css" rel="stylesheet">
                 <script src="https://calendar.google.com/calendar/scheduling-button-script.js" async></script>
                 <script>
@@ -49,10 +50,11 @@
                 });
                 })();
                 </script>
-                <!-- end Google Calendar Appointment Scheduling -->
-            </div>
+            </div> 
         </div>
     </section>
+
+
     <section class="questions">
         <h1>Jeśli masz podobne pytania...</h1>
         <div class="questions-container">
@@ -89,41 +91,8 @@
         </div>
         <h1>To znaczy, że czas na uporządkowanie finansów w Twojej firmie.</h1>
     </section>
-    <!-- <section class="services">
-        <h1>Realne efekty</h1>
-        <div class="services-container">
-            <div class="service-item">
-                <h3>Finanse i analityka</h3>
-                <ul>
-                    <li>Poprawa rentowności produktów, klientów, usług</li>
-                    <li>Usprawnienie procesów księgowych (mniej czasu na papiery)</li>
-                    <li>Wygodne raporty zarządcze</li>
-                    <li>Model finansowy Twojej firmy</li>
-                </ul>
-                <p>→ <a href="">Realizacje</a></p>
-            </div>
-            <div class="service-item">
-                <h3>Automatyzacja operacji</h3>
-                <ul>
-                    <li>Mniej powtarzalnych czynności, więcej czasu na prowadzenie firmy</li>
-                    <li>Narzędzia usprawniające codzienną pracę</li>
-                    <li>Samogenerujące raporty i zestawienia</li>
-                    <li>Automatyzacja obiegu dokumentów</li>
-                </ul>
-                <p>→ <a href="">Realizacje</a></p>
-            </div>
-            <div class="service-item">
-                <h3>Inwestycje i finansowanie</h3>
-                <ul>
-                    <li>Gdzie i jakie pieniądze pozyskać dla firmy?</li>
-                    <li>Przygotowanie do finansowania bankowego</li>
-                    <li>Plan finansowy i wycena inwestycji</li>
-                    <li>Pozyskiwanie kapitału od inwestorów</li>
-                </ul>
-                <p>→ <a href="">Realizacje</a></p>
-            </div>
-        </div>
-    </section> -->
+
+
     <section id="expierience" class="experience">
         <h1>Dzień dobry!</h1>
         <div class="experience-container">
@@ -154,6 +123,8 @@
             </div>
         </div>
     </section>
+
+
     <section id="offer" class="offer">
         <h1>Jak możemy rozpocząć?</h1>
         <div class="offer-container">
@@ -163,8 +134,7 @@
 
                 <a href="https://calendar.app.google/yj5oxquj9VDekEtW9" class="calendar-link">Zobacz terminy</a>
 
-                <div class="calendar-widget">
-                    <!-- Google Calendar Appointment Scheduling begin -->
+                <div class="calendar-widget"> 
                     <link href="https://calendar.google.com/calendar/scheduling-button-script.css" rel="stylesheet">
                     <script src="https://calendar.google.com/calendar/scheduling-button-script.js" async></script>
                     <script>
@@ -174,14 +144,13 @@
                         calendar.schedulingButton.load({
                         url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ1-7HnIr4lYQPXYS-1FrUTd659RBKIaz7vMFJkLvoZ41g6TGhjErKJRj-JVF3n_RtMMgy1o_C5u?gv=true',
                         color: '#0056b3',
-                        label: 'Zobacz terminy',
+                        label: 'Zrób pierwszy krok',
                         target,
                         });
                     });
                     })();
                     </script>
-                    <!-- end Google Calendar Appointment Scheduling -->
-                </div>
+                </div> 
             </div>
             <div class="offer-item">
                 <i class="fa-solid fa-angles-right"></i><b>Pakiet konsultacji</b>
@@ -193,11 +162,8 @@
             </div>
         </div>
     </section>
-    <!-- <section id="contact" class="contact">
-        <h2>Co dalej?</h2>
-        <p class="mar">Zarezerwuj termin na wideokonferencję (20 min) bez zobowiązań.</p>
-        <a href="#signup" class="btn">Zobacz terminy</a>
-    </section> -->
+
+
     <footer>
         <div id="contact" class="footer-container">
             <div class="footer-column">
