--- a/index.html
+++ b/index.html
@@ -55,7 +55,46 @@
     </section>
 
 
+
     <section class="questions">
+        <h1>To nie muszą być Twoje problemy</h1>
+        <div class="questions-container">
+            <ul class="questions-list">
+                <li class="questions-list-item">
+                    <i class="fa-regular fa-pen-to-square"></i>
+                    <span>"Nie wiem ile dokładnie zarabiam i na co mogę sobie pozwolić"</span>
+                </li>
+                <li class="questions-list-item">
+                    <i class="fa-regular fa-pen-to-square"></i>
+                    <span>"Co roku zyski, ale gdzie jest ta gotówka?"</span>
+                </li>
+                <li class="questions-list-item">
+                    <i class="fa-regular fa-pen-to-square"></i>
+                    <span>"Które produkty / klienci tak naprawdę ciągną mój biznes w górę?"</span>
+                </li>
+                <li class="questions-list-item">
+                    <i class="fa-regular fa-pen-to-square"></i>
+                    <span>"Chcę zatrudnić kontrolera lub dyrektora finansowego, ale nie wiem jak to dobrze zrobić"</span>
+                </li>
+                <li class="questions-list-item">
+                    <i class="fa-regular fa-pen-to-square"></i>
+                    <span>"Chcę zatrudnić księgową albo zmienić księgowość"</span>
+                </li>
+                <li class="questions-list-item">
+                    <i class="fa-regular fa-pen-to-square"></i>
+                    <span>"Potrzebuję prostego modelu finansowego swojej firmy"</span>
+                </li>
+                <li class="questions-list-item">
+                    <i class="fa-regular fa-pen-to-square"></i>
+                    <span>"Chcę mieć proste i wygodne raporty finansowe — bilans nic mi nie mówi"</span>
+                </li>
+            </ul>
+        </div>
+        <h1>Dobrze ułożone finanse pomagają w biznesie, a nie są jego problemem.</h1>
+    </section>
+
+
+    <!-- <section class="questions">
         <h1>Jeśli masz podobne pytania...</h1>
         <div class="questions-container">
             <ul class="questions-list">
@@ -90,24 +129,25 @@
             </ul>
         </div>
         <h1>To znaczy, że czas na uporządkowanie finansów w Twojej firmie.</h1>
-    </section>
+    </section> -->
 
 
     <section id="expierience" class="experience">
         <h1>Dzień dobry!</h1>
         <div class="experience-container">
-        <p>Nazywam się Krzysztof Czuba i mam 15 lat doświadczenia w rolach menedżerskich, w tym 10 lat w roli CFO (Dyrektora Finansowego) lub CEO/COO (Dyrektora Generalnego) w randze członka zarządu lub rady nadzorczej.</p>
-        <p>Zarządzałem finansami spółek od startup'u po kilkadziesiąt milionów złotych przychodów, a także byłem Menedżerem Inwestycyjnym lub Prezesem Zarządu w dwóch funduszach inwestycyjch (typu FIZAN oraz ASI).</p>
-        <!-- <p>Dodatkowo programuję w Python'ie oraz C# i tworzyłem m.in. boty do handlu algorytmicznego na kontraktach <i>futures</i>.</p> -->
-        <p>Do realizowanych przeze mnie projektów pozyskałem ponad 20 mln zł w formie emisji obligacji, inwestycji funduszy instytucjonalnych lub prywatnych inwestorów.</p>
+            <p>Nazywam się Krzysztof Czuba i od 15 lat dbam o rozwój firm, w tym 10 lat w roli CFO (Dyrektora Finansowego), CEO/COO (Dyrektora Generalnego) w randze członka zarządu lub rady nadzorczej.</p>
+            <p>Zarządzałem finansami spółek od startup'u po kilkadziesiąt milionów złotych przychodów, a także byłem Menedżerem Inwestycyjnym lub Prezesem Zarządu w dwóch funduszach inwestycyjch (typu FIZAN oraz ASI).</p>
+            <!-- <p>Dodatkowo programuję w Python'ie oraz C# i tworzyłem m.in. boty do handlu algorytmicznego na kontraktach <i>futures</i>.</p> -->
+            <p>Do realizowanych przeze mnie projektów pozyskałem ponad 20 mln zł w formie emisji obligacji, inwestycji funduszy instytucjonalnych lub prywatnych inwestorów.</p>
+            <p class="takeaway-box">Ale wiem, że prowadzenie firmy na co dzień to nie "miliony" i "rady nadzorcze"<br/>— to codzienne sprawy i małe decyzje, które prowadzą do wiekszego celu. Decyzje, przy których dobrze jest czasem mieć doświadczonego partnera.</p>
         </div>
     </section>
     <section id="projects" class="projects">
-        <h1>Przykładowe projekty</h1>
+        <h1>Wybrane projekty, które prowadziłem</h1>
         <div class="projects-container">
             <div class="project-item">
                 <img src="img/vs.jpeg" alt="volleystation" class="project-logo">
-                <p><b>Globalny SaaS</b><br/>Rekrutacja CFO, nadzór nad przygotowaniem materiałów dla inwestorów.</p>
+                <p><b>Globalny SaaS</b><br/>Rekrutacja CFO, przygotowanie strategii finansowej do exit'u.</p>
             </div>
             <div class="project-item">
                 <img src="img/pm11.png" alt="PM11" class="project-logo">
@@ -144,7 +184,7 @@
                         calendar.schedulingButton.load({
                         url: 'https://calendar.google.com/calendar/appointments/schedules/AcZssZ1-7HnIr4lYQPXYS-1FrUTd659RBKIaz7vMFJkLvoZ41g6TGhjErKJRj-JVF3n_RtMMgy1o_C5u?gv=true',
                         color: '#0056b3',
-                        label: 'Zrób pierwszy krok',
+                        label: 'Zobacz terminy',
                         target,
                         });
                     });
@@ -154,7 +194,7 @@
             </div>
             <div class="offer-item">
                 <i class="fa-solid fa-angles-right"></i><b>Pakiet konsultacji</b>
-                <p>Zarezerwuj pakiet konsultacji (10h), który wykorzystasz w miarę swoich potrzeb. Doskonałe w sytuacji, kiedy nie masz jeszcze ostatecznie określonych planów lub potrzeb, ale chcesz się możliwie dobrze przygotować.</p>
+                <p>Zarezerwuj pakiet konsultacji (5h lub 10h), który wykorzystasz w miarę swoich potrzeb. Doskonałe w sytuacji, kiedy nie masz jeszcze ostatecznie określonych planów lub potrzeb, ale chcesz się możliwie dobrze przygotować.</p>
             </div>
             <div class="offer-item">
                 <i class="fa-solid fa-forward"></i><b>Stała opieka nad finansami</b>
